libjava 	* gnu/javax/net/ssl/provider/SSLSocketFactoryImpl.h: Rebuilt. libjava/classpath 2007-04-19  Casey Marshall  <csm@gnu.org> 	PR classpath/31626: 	* gnu/javax/net/ssl/provider/SSLSocketFactoryImpl.java 	(createSocket): New method.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@123977 138bc75d-0d04-0410-961f-82ee72b054a4